--- a/public_html/page1.html
+++ b/public_html/page1.html
@@ -62,19 +62,19 @@ body {font-family: "Roboto", sans-serif}
             <td>Jill</td>
             <td>Smith</td>
             <td>50</td>
-            <td>6xxxxxxxxx</td>
+            <td>6xxxxxxxx</td>
           </tr>
           <tr>
             <td>Eve</td>
             <td>Jackson</td>
             <td>94</td>
-             <td>6xxxxxxxxx</td>
+             <td>6xxxxxxxx</td>
           </tr>
           <tr>
             <td>Adam</td>
             <td>Johnson</td>
             <td>67</td>
-             <td>6xxxxxxxxx</td>
+             <td>6xxxxxxxx</td>
           </tr>
         </table>
         <div class="w3-center">
