--- a/public_html/page1.html
+++ b/public_html/page1.html
@@ -208,9 +208,10 @@ function displayW3CSS() {
     myContainer.style.display = "none";
 } 
 
-var elements = [{"FirstName":"Somchai", "LastName":"Hankla", "Points": 60},
-{"FirstName":"Nadetch", "LastName":"Hekaru", "Points": 49},
-{"FirstName":"Yaya", "LastName":"Tokoda", "Points": 78}] ; 
+var elements = [{"FirstName":"Somchai", "LastName":"Hankla", "Points": 60 ,"Student" :6108121128},
+{"FirstName":"Nadetch", "LastName":"Hekaru", "Points": 49,"Student" :6108121218},
+{"FirstName":"Yaya", "LastName":"Tokoda", "Points": 78,"Student" :6108121281}]; 
+   // {"FirstName":"xxxx", "LastName":"xxx", "Points": 90, "Student" :6100000001}
 
 function displayDataToTable(){
     for (var i =0 ; i<elements.length; i++) {
@@ -222,10 +223,12 @@ function displayDataToTable(){
         let cell1 = row.insertCell(0);
         let cell2 = row.insertCell(1);
         let cell3 = row.insertCell(2);
+        let cell4 = row.insertCell(3);
 
         cell1.innerHTML = elements[i].FirstName;
         cell2.innerHTML = elements[i].LastName ;
         cell3.innerHTML = elements[i].Points;
+        cell4.innerHTML = elements[i].Student;
     }
  
 }
